# utfcpp

./: .gitignore  .travis.yml  API_REFERENCE.md  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE.bazel  conanfile.txt  meson.build  meson.options  utf8cppConfig.cmake.in
.circleci/: config.yml
.github/workflows/: ci-linux-clang.yml  ci-linux-gcc.yml  ci-windows-msvc.yml  cmake-multi-platform.yml  vs17.yml
bench/: CMakeLists.txt  benchmark.cpp  compare_commits.py
samples/: CMakeLists.txt  docsample.cpp
source/: utf8.h
source/utf8/: checked.h  core.h  cpp11.h  cpp11_facilities.h  cpp17.h  unchecked.h
tests/: CMakeLists.txt  apitests.cpp  negative.cpp  test_checked_api.cpp  test_checked_api.h  test_checked_iterator.cpp  test_cpp11.cpp  test_cpp20.cpp  test_unchecked_api.cpp  test_unchecked_api.h  test_unchecked_iterator.cpp
